# robocup-home-education-asimros

./: CMakeLists.txt  README.md  package.xml
behaviour_trees_xml/: tree_nav.xml  tree_nav_init.xml
carrymyluggage/: CMakeLists.txt  package.xml
carrymyluggage/behaviour_trees_xml/: tree_nav.xml  tree_nav_init.xml
carrymyluggage/include/behaviour_trees/: AskForCase.h  BTNavAction.h  ChooseSide.h  FollowPoint.h  HaveFinished.h  LocPerson.h  RequestComeCloser.h  Start.h  TurnAround.h  WaitForPerson.h
carrymyluggage/include/detect_case/: SideCase.h
carrymyluggage/include/sound/: Listener.h  Speaker.h
carrymyluggage/launch/: carrymyluggage.launch  dialog.launch  pruebas.launch
carrymyluggage/src/: DialogInterface.cpp  node_behaviour_tree_nav.cpp  node_behaviour_tree_nav_init.cpp  node_bt_together.cpp
carrymyluggage/src/behaviour_trees/: Arena.cpp  AskForCase.cpp  ChooseSide.cpp  FollowPoint.cpp  HaveFinished.cpp  LocPerson.cpp  RequestComeCloser.cpp  Sand.cpp  Start.cpp  TurnAround.cpp  WaitForPerson.cpp
carrymyluggage/src/detect_case/: SideCase.cpp
carrymyluggage/src/sound/: Listener.cpp  Speaker.cpp  listenerDF.cpp
findmymates/: CMakeLists.txt  package.xml
findmymates/behaviour_trees_xml/: tree.xml
findmymates/include/behaviour_trees/: Arena.h  AskInfo.h  Begin.h  CheckPerson.h  FollowPoint.h  GoPoint.h  LocPerson.h  Localization.h  Referee.h  TellInfo.h
findmymates/include/behaviour_trees/information/: Info.h
findmymates/include/detect_person/: DetectPerson.h
findmymates/include/information/: Info.h
findmymates/include/sound/: Listener.h
findmymates/include/sound2/: Listener.h  Speaker.h
findmymates/launch/: findmymates.launch
findmymates/src/: node_behaviour_tree.cpp
findmymates/src/behaviour_trees/: Arena.cpp  AskInfo.cpp  Begin.cpp  CheckPerson.cpp  GoPoint.cpp  LocPerson.cpp  Localization.cpp  Referee.cpp  TellInfo.cpp
findmymates/src/detect_person/: DetectPerson.cpp
findmymates/src/information/: Info.cpp
findmymates/src/sound/: Listener.cpp  Speaker.cpp
findmymates/src/sound2/: Listener.cpp  Speaker.cpp
include/behaviour_trees/: ChooseSide.h  FollowPoint.h  LocPerson.h  RequestComeCloser.h  Sand.h  Turn.h  TurnAround.h  WaitForPerson.h  loc_person.h
include/detect_case/: SideCase.h
include/navigation/: NavClient.h
include/person_tf/: Tf_calc.h
include/sound/: Listener.h
personlocalization/: CMakeLists.txt  package.xml
personlocalization/include/bbx_filter/: img_buffer.h  person_filter.h
personlocalization/include/person_tf/: Tf_calc.h
personlocalization/include/sound/: Listener.h  Speaker.h
personlocalization/launch/: classdemo.launch  dialog.launch  personlocalization.launch
personlocalization/src/: node_calc_tf_person.cpp  node_filter_bbx.cpp
personlocalization/src/bbx_filter/: img_buffer.cpp  person_filter.cpp
personlocalization/src/person_tf/: Tf_calc.cpp
personlocalization/src/sound/: listenerDF.cpp  speakerDF.cpp
sound/: CMakeLists.txt  package.xml
sound/launcher/: dialog.launch
sound/src/nodes/: listenerDF.cpp  speakerDF.cpp  testDF.cpp
src/: node_behaviour_tree_nav.cpp  node_behaviour_tree_nav_init.cpp  node_bt_together.cpp  node_filter_bbx.cpp  nodo_calc_tf_person.cpp  nodo_nav_client.cpp  nodo_prueba.cpp
src/behaviour_trees/: AskForCase.cpp  ChooseSide.cpp  FollowPoint.cpp  HaveFinished.cpp  LocPerson.cpp  RequestComeCloser.cpp  Sand.cpp  Turn.cpp  TurnAround.cpp  WaitForPerson.cpp  loc_person.cpp
src/detect_case/: SideCase.cpp
src/navigation/: NavClient.cpp
src/person_tf/: Tf_calc.cpp
src/sound/: Listener.cpp
